added features placeholder and hover effects

--- a/index.html
+++ b/index.html
@@ -25,4 +25,16 @@
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
 
+		<section class = "features">
+			<div class = "new-additions feature-box">
+				<img src="img/sales-place.png">
+				<p class = "label"> New</p>
+			</div>
+
+			<div class = "sales feature-box">
+				<img src="img/sales-place.png">
+				<p class = "label"> Deals</p>
+			</div>
+		</section>
+
 	</body>
