--- a/index.html
+++ b/index.html
@@ -44,4 +44,8 @@
 			<img class="events-grid" src="img/events-place.png">
 		</section>
 
+	<section class = "footer">
+			<img src="img/funko.png" height="50" width ="100" alt="funko logo">
+		</section>
+
 	</body>
