fixed some navigation menu errors along with inline display problems

--- a/products.html
+++ b/products.html
@@ -23,16 +23,19 @@
 		</header>
 
 		<section class = "product-nav">
-			<nav>
 				<p>Pop! Figures</p>
 				<a href = "#" class="nav-button"> Pop! Animation </a>
 				<a href = "#" class="nav-button"> Pop! Heroes </a>
 				<a href = "#" class="nav-button"> Pop! Disney </a>
 				<a href = "#" class="nav-button"> Pop! TV </a> 
 				<a href = "#" class="nav-button"> Pop! Movies </a> 
-				<a href = "#" class="nav-button"> Pop! Games </a> 
-			</nav>
+				<a href = "#" class="nav-button"> Pop! Games </a>
 		</section>
+
+		<section class = "product-list">
+			<img class="category-banner" src = "img/product-category.png">
+		</section>
+
 
 
 	</body>
