Added multi-list product place-holder images

--- a/products.html
+++ b/products.html
@@ -32,10 +32,37 @@
 				<a href = "#" class="nav-button"> Pop! Games </a>
 		</section>
 
+	<div class = "multi-all">
 		<section class = "product-list">
 			<img class="category-banner" src = "img/product-category.png">
 		</section>
 
+		<section class = "multi-list">
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+	       	<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+		</section>
+	</div>
 
 
 	</body>
