added the "current" html tage

--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
 				<img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
 			</div>
 			<nav>
-				<a href = "#"> Products </a>
+				<a href = "products.html" class="current"> Products </a>
 				<a href = "#"> About </a>
 				<a href = "#"> Contact </a>
 				<a href = "#"> Events </a> 
@@ -39,6 +39,29 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+	       	<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+	       				<div class = "item-box">
 				<img class="multi-item" src = "img/item-place.png">
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
