--- a/products.html
+++ b/products.html
@@ -87,5 +87,19 @@
 		</section>
 	</div>
 
+	<section class = "footer">
+		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
+		  <div class = "email">
+		   <form id="comments" method="post" action="#">
+          <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+          </form>
+      </div>
+		
+		<div class ="footer-icons">
+			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
+			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
+			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+		</div>
+		</section>
 
 	</body>
