added a script tag that avoids the buttons from resizing everytime the page is refreshed

--- a/products.html
+++ b/products.html
@@ -103,3 +103,10 @@
 		</section>
 
 	</body>
+
+<script>
+    window.addEventListener('load', function load() {
+    window.removeEventListener('load', load, false);
+    document.body.classList.remove('load');
+  }, false);
+</script>
