added a breadcrumb navigation on top of the production category banner image

--- a/products.html
+++ b/products.html
@@ -33,8 +33,22 @@
 		</section>
 
 	<div class = "multi-all">
+		<nav class = "breadcrumbs">
+				<a href ="#" class= "bc-home">Home</a> 
+				<p class = "bc-break"> // </p>
+				<a href = "#" class = "bc-products">Products</a>
+		</nav>
 		<section class = "product-list">
 			<img class="category-banner" src = "img/product-category.png">
+		</section>
+
+		<section class ="drop-down">
+			<select>
+	  			<option value="volvo">Volvo</option>
+	  			<option value="saab">Saab</option>
+	  			<option value="opel">Opel</option>
+	 			<option value="audi">Audi</option>
+			</select>
 		</section>
 
 		<section class = "multi-list">
