--- a/products.html
+++ b/products.html
@@ -22,6 +22,7 @@
 			</nav>
 		</header>
 
+	<div class = "multi-all">
 		<section class = "product-nav">
 				<p>Pop! Figures</p>
 				<a href = "#" class="nav-button"> Pop! Animation </a>
@@ -32,7 +33,6 @@
 				<a href = "#" class="nav-button"> Pop! Games </a>
 		</section>
 
-	<div class = "multi-all">
 		<nav class = "breadcrumbs">
 				<a href ="#" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
@@ -40,16 +40,16 @@
 		</nav>
 		<section class = "product-list">
 			<img class="category-banner" src = "img/product-category.png">
-		</section>
-
-		<section class ="drop-down">
+			<div class ="drop-down">
 			<select>
 	  			<option value="volvo">Volvo</option>
 	  			<option value="saab">Saab</option>
 	  			<option value="opel">Opel</option>
 	 			<option value="audi">Audi</option>
 			</select>
+		</div>
 		</section>
+
 
 		<section class = "multi-list">
 			<div class = "item-box">
