Added a "sort by" option

--- a/products.html
+++ b/products.html
@@ -42,10 +42,11 @@
 			<img class="category-banner" src = "img/product-category.png">
 			<div class ="drop-down">
 			<select>
-	  			<option value="volvo">Volvo</option>
-	  			<option value="saab">Saab</option>
-	  			<option value="opel">Opel</option>
-	 			<option value="audi">Audi</option>
+				<option class "dd-opt" value="volvo">Sort By</option>	
+	  			<option value="name">Alphabetical</option>
+	  			<option>Newly Released</option>
+	  			<option>Price: Higher</option>
+	 			<option>Price: Lower</option>
 			</select>
 		</div>
 		</section>
