Added a row of 4 more item boxes

--- a/products.html
+++ b/products.html
@@ -99,6 +99,30 @@
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
+
+	       	<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+	       	<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/item-place.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
 		</section>
 	</div>
 
