--- a/about.html
+++ b/about.html
@@ -2,12 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
-		<title>Funko! Pop</title>
+		<title>Funko! Pop About</title>
 
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+
+
+	<link rel="stylesheet" href="css/grid.css">
+
 	</head>
+	
 	<body>
 		<header>
 			<div class = "logo">
@@ -22,5 +27,94 @@
 		</header>
 
 		<section class = "banner">
-			<img src="img/banner-place.png" alt="banner image">
+			<img src="img/banner-place.png" alt="banner image">	
 		</section>
+
+
+
+		
+
+		<div class="grid">
+
+			<div class="grid-col-5of10">
+
+			<h4 class="information-header"> MEET THE TEAM </h4>
+			
+			<p class="crimson-text">
+					"Paragraph of about us. meet the team. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."
+			</p>
+
+			</div>
+		
+
+		<div class="grid-col-5of10">
+
+			<img class="picture-place" src="img/picture-place.png" height="250" width="500" alt="team picture">
+
+			</div>
+
+			</div>
+		</div>
+
+		
+
+		<section>
+
+			<div class="grid">
+
+				<div class="grid-col-5of10" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+				
+				<div class="grid-col-5of10" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+
+				<div class="grid-col-5of10" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+
+
+				<div class="grid-col-5of10" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+
+				<div class="grid-col-5of10" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+			</div>
+
+		</section>
+
+		</body>
+
