started recommendations section

--- a/view-item.html
+++ b/view-item.html
@@ -21,6 +21,7 @@
 				<a href = "#"> Events </a> 
 			</nav>
 		</header>
+		
 		<div class = "item-all">
 			<section class = "view-item">
 				<img class = "item-picture" src = "img/view-item.png" height ="400" width="400" alt "item view">
@@ -40,4 +41,20 @@
          		 	<a href ="#" class="button load"> Add to Cart Button</a>
          		</div>
 			</section>
+
+			<section class = "recommendations">
+				<h3>blah</h3>
+
+			</section>
+
 		</div>
+	</body>
+
+
+
+<script>
+    window.addEventListener('load', function load() {
+    window.removeEventListener('load', load, false);
+    document.body.classList.remove('load');
+  }, false);
+</script>
