fully added in the recommendations section

--- a/view-item.html
+++ b/view-item.html
@@ -43,7 +43,27 @@
 			</section>
 
 			<section class = "recommendations">
-				<h3>blah</h3>
+				<h6 class= "small-header">We Also Recommend For You</h6>
+
+				<div class = "recommendation-box">	
+					<div class = "item-box">
+						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
+						<p class ="item-name">Pop! Heroes: Batman</p>
+		       			<p class ="item-number">Item: #2201</p>
+		       		</div>
+
+		       		<div class = "item-box">
+						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
+						<p class ="item-name">Pop! Heroes: Batman</p>
+		       			<p class ="item-number">Item: #2201</p>
+		       		</div>
+
+					<div class = "item-box">
+						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
+						<p class ="item-name">Pop! Heroes: Batman</p>
+		       			<p class ="item-number">Item: #2201</p>
+		       		</div>
+		       </div>
 
 			</section>
 
