changed "meet the team" postition

--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 		<meta charset= "utf-8">
 		<title>Funko! Pop</title>
 
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 	</head>
@@ -24,3 +24,11 @@
 		<section class = "banner">
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
+
+
+		<section>
+
+			<h4 class="information-header"> MEET THE TEAM </h4>
+
+		</sdction>
+	</body>
