--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
 			<div class="grid-col-5of10">
 
-			<h4 class="information-header"> MEET THE TEAM </h4>
+		
 			
 			<p class="crimson-text">
 					"Paragraph of about us. meet the team. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."
@@ -56,7 +56,10 @@
 			</div>
 		</div>
 
-		
+		<div>
+
+			<h4 class="information-header" id="meet-team"> MEET THE TEAM </h4>
+		</div>
 
 		<section>
 
