several small changes to breadcrumbs, header, footer, view item section

--- a/view-item.html
+++ b/view-item.html
@@ -21,12 +21,21 @@
 				<a href = "#"> Events </a> 
 			</nav>
 		</header>
+
+		<nav class = "item-breadcrumbs">
+				<a href ="#" class= "bc-home">Home</a> 
+				<p class = "bc-break"> // </p>
+				<a href = "#" class = "bc-products">Products</a>
+				<p class = "bc-break"> // </p>
+				<a href = "#" class = "bc-products">Pop! Heroes</a><p class = "bc-break"> // </p>
+				<a href = "#" class = "bc-current">Pop! Heroes: Batman</a>
+		</nav>
 		
 		<div class = "item-all">
 			<section class = "view-item">
 				<img class = "item-picture" src = "img/view-item.png" height ="400" width="400" alt "item view">
 				<div class ="item-heading">
-					<h3 class= "item-header">Pop! Superheroes: Batman</h3>
+					<h3 class= "item-header">Pop! Heroes: Batman</h3>
          		 	
          		 	<h5 class= "item-subheader">Item #2201</h5>
          		 	
@@ -46,19 +55,19 @@
 				<h6 class= "small-header">We Also Recommend For You</h6>
 
 				<div class = "recommendation-box">	
-					<div class = "item-box">
+					<div class = "recommend-item-box">
 						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
 						<p class ="item-name">Pop! Heroes: Batman</p>
 		       			<p class ="item-number">Item: #2201</p>
 		       		</div>
 
-		       		<div class = "item-box">
+		       		<div class = "recommend-item-box">
 						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
 						<p class ="item-name">Pop! Heroes: Batman</p>
 		       			<p class ="item-number">Item: #2201</p>
 		       		</div>
 
-					<div class = "item-box">
+					<div class = "recommend-item-box">
 						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
 						<p class ="item-name">Pop! Heroes: Batman</p>
 		       			<p class ="item-number">Item: #2201</p>
@@ -66,8 +75,22 @@
 		       </div>
 
 			</section>
-
 		</div>
+
+		<section class = "footer">
+			<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
+			  <div class = "email">
+			   <form id="comments" method="post" action="#">
+	          <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+	          </form>
+	      </div>
+			
+			<div class ="footer-icons">
+				<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
+				<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
+				<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+			</div>
+		</section>
 	</body>
 
 
