upcoming events page

--- a/events.html
+++ b/events.html
@@ -7,7 +7,11 @@
 		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+
+		<link rel="stylesheet" href="css/grid.css">
 	</head>
+
+
 	<body>
 		<header>
 			<div class = "logo">
@@ -25,10 +29,47 @@
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
 
+		<h4 class="information-header" id="upcoming-e"> Upcoming events </h4>
 
+		
 		<section>
 
-			<h4 class="information-header"> MEET THE TEAM </h4>
+			<div class="grid">
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<h4 class="event-name">Event name</h4>
+				</div>
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<h4 class="event-name">Event name</h4>
+				</div>
+
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<h4 class="event-name">Event name</h4>
+				</div>
+
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<h4 class="event-name">Event name</h4>
+				</div>
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<h4 class="event-name">Event name</h4>
+				</div>
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<h4 class="event-name">Event name</h4>
+				</div>
+
+			</div>
+
 
 		</sdction>
 	</body>
