edited headings of about and event page h, p for event1

--- a/about.html
+++ b/about.html
@@ -37,8 +37,6 @@
 		<div class="grid">
 
 			<div class="grid-col-5of10">
-
-		
 			
 			<p class="crimson-text">
 					"Paragraph of about us. meet the team. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."
@@ -69,7 +67,7 @@
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
-					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="staff-name" id="staff-name"> Jane Doe </p>
 					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
 
 				</div>
@@ -79,7 +77,7 @@
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
-					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="staff-name" id="staff-name"> Jane Doe </p>
 					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
 
 				</div>
@@ -89,7 +87,7 @@
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
-					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="staff-name" id="staff-name"> Jane Doe </p>
 					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
 
 				</div>
@@ -100,7 +98,7 @@
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
-					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="staff-name" id="staff-name"> Jane Doe </p>
 					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
 
 				</div>
@@ -110,7 +108,7 @@
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
-					<h4 class="information-header" id="staff-name"> Jane Doe </h4>
+					<p class="staff-name" id="staff-name"> Jane Doe </p>
 					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
 
 				</div>
