--- a/events1.html
+++ b/events1.html
@@ -29,5 +29,22 @@
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
 
+		<div class="grid">
+			<div class="grid-col-5of10">
+
+				<h4 class="information-header">Event Name</h4>
+				<p class="crimson-text">
+					"Paragraph of about us. meet the team. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. </p>
+					<p class="crimson-text"> The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."</p>
+			</div>
+
+			<div class="grid-col-5of10">
+
+				<img class="picture-place" src="img/picture-place.png" height="250" width="500" alt="team picture">
+			</div>
+
+		<section>
+			<h4 class="event-time"
+
 	</body>
 </html>
