created a new html page for the steps to purchase a product. added a link tag for the new css that was made

--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
 		<title>Funko! Pop</title>
 
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/product.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 	</head>	
@@ -54,7 +55,7 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
+				<a href ="view-item.html"><img class="multi-item" src = "img/item-place.png"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
