--- a/view-item.html
+++ b/view-item.html
@@ -5,6 +5,7 @@
 		<title>Funko! Pop</title>
 
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/product.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 	</head>	
