--- a/purchase-item.html
+++ b/purchase-item.html
@@ -6,6 +6,8 @@
 
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/product.css">
+		<script type="text/javascript" src="js/util-functions.js"></script>
+		<script type="text/javascript" src="js/clear-default-text.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 	</head>
@@ -22,8 +24,61 @@
 			</nav>
 		</header>
 
-		<section ="information">
-			<h3 class= "item-header">Pop! Heroes: Batman</h3>
+		<section class="information">
+			<h3 class= "information-header item-header">Product Review</h3>
+			<h4 class= "detail-header">Shipping Information</h4>
+			<form id="detail comments" method="post" action="#">
+          		<input id ="input-detail" type="text" name="name" value="Name"  class="cleardefault">
+         	</form>
+			<form id="detail comments" method="post" action="#">
+          		<input id ="input-detail" type="text" name="address" value="Address"  class="cleardefault">
+          </form>
+          	
+		<div class ="detail-line">
+          <form id="detail comments" method="post" action="#">
+          		<input id ="medium-detail" type="text" name="city" value="City" class="cleardefault">
+          </form>
+
+          <form id="detail comments" method="post" action="#">
+          		<input id ="small-detail" type="text" name="PC" value="Postal Code" class="cleardefault">
+          </form>
+      </div>
+
+      <div class ="detail-line">
+<!--           <form id="detail comments" method="post" action="#">
+          		<input class="half-detail comments" type="text" id="form-name" placeholder="Country">
+          </form> -->
+         <div class ="drop-down-details">
+         <select class = "detail-country">
+				<option class "detail-opt" value="country">Country</option>	
+	  			<option value="name">Australia</option>
+	  			<option>Canada</option>
+	  			<option>United Kingdom</option>
+	  			<option>United States</option>
+			</select>
+		</div>
+
+          <form id="detail comments" method="post" action="#">
+          		<input id ="half-detail" type="text" name="phone" value="Phone Number" class="cleardefault">
+          </form>
+      </div>
+<!--       <div class ="detail-line2">
+          <form id="detail comments" method="post" action="#">
+          		<input class="half-detail comments" type="text" id="form-name" placeholder="Country">
+          </form>
+
+          <form id="detail comments" method="post" action="#">
+          		<input class="half-detail comments" type="text" id="form-name" placeholder="Phone Number">
+          </form>
+      </div> -->
+
 		</section>
 
 	</body>
+
+	<script>
+    window.addEventListener('load', function load() {
+    window.removeEventListener('load', load, false);
+    document.body.classList.remove('load');
+  }, false);
+</script>
