--- a/purchase-item.html
+++ b/purchase-item.html
@@ -24,53 +24,77 @@
 			</nav>
 		</header>
 
+
 		<section class="information">
-			<h3 class= "information-header item-header">Product Review</h3>
-			<h4 class= "detail-header">Shipping Information</h4>
-			<form id="detail comments" method="post" action="#">
-          		<input id ="input-detail" type="text" name="name" value="Name"  class="cleardefault">
-         	</form>
-			<form id="detail comments" method="post" action="#">
-          		<input id ="input-detail" type="text" name="address" value="Address"  class="cleardefault">
-          </form>
-          	
-		<div class ="detail-line">
-          <form id="detail comments" method="post" action="#">
-          		<input id ="medium-detail" type="text" name="city" value="City" class="cleardefault">
-          </form>
+			<h3 class= "information-header item-header">Checkout</h3>
+			
+			<div class = "checkout-information">
+			<div = class="shipping">
+				<h4 class= "detail-header">Shipping Information</h4>
+				<form id="detail comments" method="post" action="#">
+	          		<input id ="input-detail" type="text" name="name" value="Name"  class="cleardefault">
+	         	</form>
+				<form id="detail comments" method="post" action="#">
+	          		<input id ="input-detail" type="text" name="address" value="Address"  class="cleardefault">
+	        	</form>
+	          	
+			<div class ="detail-line">
+	          <form id="detail comments" method="post" action="#">
+	          		<input id ="medium-detail" type="text" name="city" value="City" class="cleardefault">
+	          </form>
 
-          <form id="detail comments" method="post" action="#">
-          		<input id ="small-detail" type="text" name="PC" value="Postal Code" class="cleardefault">
+	          <form id="detail comments" method="post" action="#">
+	          		<input id ="small-detail" type="text" name="PC" value="Postal Code" class="cleardefault">
+	          </form>
+	      </div>
+
+	      <div class ="detail-line">
+	         <div class ="drop-down-details">
+	         <select class = "detail-country">
+					<option class "detail-opt" value="country">Country</option>	
+		  			<option value="name">Australia</option>
+		  			<option>Canada</option>
+		  			<option>United Kingdom</option>
+		  			<option>United States</option>
+				</select>
+			</div>
+
+	          <form id="detail comments" method="post" action="#">
+	          		<input id ="half-detail" type="text" name="phone" value="Phone Number" class="cleardefault">
+	          </form>
+	      </div>
+	  </div>
+	  
+	  <div class ="payment">
+	  	<h4 class= "detail-header">Payment Information</h4>
+		    <div class ="drop-down-details  drop-down-card">
+		     <select class = "detail-card">
+					<option class "detail-opt" value="country">Card Type</option>	
+		  			<option value="name">Mastercard</option>
+		  			<option>Visa</option>
+				</select>
+			</div>
+
+        <div class ="detail-line">
+        <form id="detail comments" method="post" action="#">
+          <input id ="input-detail" type="text" name="PC" value="Name on Card" class="cleardefault">
           </form>
+		<form id="detail comments" method="post" action="#">
+			<input id ="input-detail" type="text" name="PC" value="Card Number" class="cleardefault">
+		</form>
       </div>
-
       <div class ="detail-line">
-<!--           <form id="detail comments" method="post" action="#">
-          		<input class="half-detail comments" type="text" id="form-name" placeholder="Country">
-          </form> -->
-         <div class ="drop-down-details">
-         <select class = "detail-country">
-				<option class "detail-opt" value="country">Country</option>	
-	  			<option value="name">Australia</option>
-	  			<option>Canada</option>
-	  			<option>United Kingdom</option>
-	  			<option>United States</option>
-			</select>
-		</div>
-
-          <form id="detail comments" method="post" action="#">
-          		<input id ="half-detail" type="text" name="phone" value="Phone Number" class="cleardefault">
+        <form id="detail comments" method="post" action="#">
+          <input id ="first-half-detail" type="text" name="PC" value="Expiry Date: MM/YY" class="cleardefault">
           </form>
+		<form id="detail comments" method="post" action="#">
+			<input id ="half-detail" type="text" name="PC" value="Security Code" class="cleardefault">
+		</form>
       </div>
-<!--       <div class ="detail-line2">
-          <form id="detail comments" method="post" action="#">
-          		<input class="half-detail comments" type="text" id="form-name" placeholder="Country">
-          </form>
+	</div>
+</div>
 
-          <form id="detail comments" method="post" action="#">
-          		<input class="half-detail comments" type="text" id="form-name" placeholder="Phone Number">
-          </form>
-      </div> -->
+
 
 		</section>
 
