fixed placeholder so when the input is being typed, the colour is changed

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -32,19 +32,19 @@
 			<div = class="shipping">
 				<h4 class= "detail-header">Shipping Information</h4>
 				<form id="detail comments" method="post" action="#">
-	          		<input id ="input-detail" type="text" name="name" value="Name"  class="cleardefault">
+	          		<input id ="input-detail" type="text" name="name" placeholder="Name"  class="cleardefault">
 	         	</form>
 				<form id="detail comments" method="post" action="#">
-	          		<input id ="input-detail" type="text" name="address" value="Address"  class="cleardefault">
+	          		<input id ="input-detail" type="text" name="address" placeholder="Address"  class="cleardefault">
 	        	</form>
 	          	
 			<div class ="detail-line">
 	          <form id="detail comments" method="post" action="#">
-	          		<input id ="medium-detail" type="text" name="city" value="City" class="cleardefault">
+	          		<input id ="medium-detail" type="text" name="city" placeholder="City" class="cleardefault">
 	          </form>
 
 	          <form id="detail comments" method="post" action="#">
-	          		<input id ="small-detail" type="text" name="PC" value="Postal Code" class="cleardefault">
+	          		<input id ="small-detail" type="text" name="PC" placeholder="Postal Code" class="cleardefault">
 	          </form>
 	      </div>
 
@@ -60,7 +60,7 @@
 			</div>
 
 	          <form id="detail comments" method="post" action="#">
-	          		<input id ="half-detail" type="text" name="phone" value="Phone Number" class="cleardefault">
+	          		<input id ="half-detail" type="text" name="phone" placeholder="Phone Number" class="cleardefault">
 	          </form>
 	      </div>
 	  </div>
@@ -77,18 +77,18 @@
 
         <div class ="detail-line">
         <form id="detail comments" method="post" action="#">
-          <input id ="input-detail" type="text" name="PC" value="Name on Card" class="cleardefault">
+          <input id ="input-detail" type="text" name="PC" placeholder="Name on Card" class="cleardefault">
           </form>
 		<form id="detail comments" method="post" action="#">
-			<input id ="input-detail" type="text" name="PC" value="Card Number" class="cleardefault">
+			<input id ="input-detail" type="text" name="PC" placeholder="Card Number" class="cleardefault">
 		</form>
       </div>
       <div class ="detail-line">
         <form id="detail comments" method="post" action="#">
-          <input id ="first-half-detail" type="text" name="PC" value="Expiry Date: MM/YY" class="cleardefault">
+          <input id ="first-half-detail" type="text" name="PC" placeholder="Expiry Date: MM/YY" class="cleardefault">
           </form>
 		<form id="detail comments" method="post" action="#">
-			<input id ="half-detail" type="text" name="PC" value="Security Code" class="cleardefault">
+			<input id ="half-detail" type="text" name="PC" placeholder="Security Code" class="cleardefault">
 		</form>
       </div>
 	</div>
