included the cart details

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -93,10 +93,24 @@
       </div>
 	</div>
 </div>
+		</section>
 
+		<section class ="review">
+			<div class= "cart">
 
+				<div class="item-wrapper">
+					<img class="review-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
+				</div>
+				
+				<div class="cart-details">
+				<p class="cart-item">Item Name</p>
+				<p class="cart-item">1</p>
+				<p class="cart-item">11.95</p>
+				</div>
+			</div>
 
 		</section>
+
 
 	</body>
 
