Product cart view is completed

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -101,11 +101,19 @@
 				<div class="item-wrapper">
 					<img class="review-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
 				</div>
-				
+
 				<div class="cart-details">
-				<p class="cart-item">Item Name</p>
-				<p class="cart-item">1</p>
-				<p class="cart-item">11.95</p>
+					<div class="cart-item">	
+						<p>Item Name</p>
+					</div>
+					<div class="cart-item cart-number">
+						<p class="cart-label">Qty</p>
+						<p>1</p>
+					</div>
+					<div class="cart-item cart-number">
+						<p class="cart-label">Price</p>
+						<p>11.95</p>
+					</div>
 				</div>
 			</div>
 
