event detail page

--- a/events.html
+++ b/events.html
@@ -38,34 +38,34 @@
 
 				<div class="grid-col-event">
 					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
-					<p class="event-name">Event name</p>
+					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
 
 				<div class="grid-col-event">
 					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
-					<p class="event-name">Event name</p>
-				</div>
-
-
-				<div class="grid-col-event">
-					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
-					<p class="event-name">Event name</p>
+					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
 
 
 				<div class="grid-col-event">
 					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
-					<p class="event-name">Event name</p>
+					<p class="sub-heading" id="event-name">Event name</p>
+				</div>
+
+
+				<div class="grid-col-event">
+					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
 
 				<div class="grid-col-event">
 					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
-					<p class="event-name">Event name</p>
+					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
 
 				<div class="grid-col-event">
 					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
-					<p class="event-name">Event name</p>
+					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
 
 			</div>
