--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
 		<div class="grid">
 
-			<div class="grid-col-5of10">
+			<div class="grid-col-half">
 			
 			<p class="crimson-text">
 					"Paragraph of about us. meet the team. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."
@@ -45,7 +45,7 @@
 			</div>
 		
 
-		<div class="grid-col-5of10">
+		<div class="grid-col-half">
 
 			<img class="picture-place" src="img/picture-place.png" height="250" width="500" alt="team picture">
 
@@ -63,17 +63,38 @@
 
 			<div class="grid">
 
-				<div class="grid-col-5of10" id="staff-grid">
+				<div class="grid-col-half" id="staff-grid">
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
-					<p class="staff-name" id="staff-name"> Jane Doe </p>
+					<p class="sub-heading" id="staff-name"> Jane Doe </p>
 					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
 
 				</div>
 
 				
-				<div class="grid-col-5of10" id="staff-grid">
+				<div class="grid-col-half" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<p class="sub-heading" id="staff-name"> Jane Doe </p>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+
+				<div class="grid-col-half" id="staff-grid">
+
+					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
+
+					<p class="sub-heading" id="staff-name"> Jane Doe </p>
+					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
+
+				</div>
+
+
+
+				<div class="grid-col-half" id="staff-grid">
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
@@ -83,28 +104,7 @@
 				</div>
 
 
-				<div class="grid-col-5of10" id="staff-grid">
-
-					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
-
-					<p class="staff-name" id="staff-name"> Jane Doe </p>
-					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
-
-				</div>
-
-
-
-				<div class="grid-col-5of10" id="staff-grid">
-
-					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
-
-					<p class="staff-name" id="staff-name"> Jane Doe </p>
-					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
-
-				</div>
-
-
-				<div class="grid-col-5of10" id="staff-grid">
+				<div class="grid-col-half" id="staff-grid">
 
 					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
 
