--- a/events1.html
+++ b/events1.html
@@ -30,15 +30,18 @@
 		</section>
 
 		<div class="grid">
-			<div class="grid-col-5of10">
+			<div class="grid-col-half">
 
 				<h4 class="information-header">Event Name</h4>
-				<p class="crimson-text">
+				<p class="crimson-text" id="event-p">
 					"Paragraph of about us. meet the team. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. </p>
-					<p class="crimson-text"> The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."</p>
+					<p class="crimson-text" id="event-p"> The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."</p>
+
+					<p class="sub-heading" id="event-time">Time: Jun 19 15:00pm</p>
+					<p id="event-time"><a href="#">More Info</a></p>
 			</div>
 
-			<div class="grid-col-5of10">
+			<div class="grid-col-half">
 
 				<img class="picture-place" src="img/picture-place.png" height="250" width="500" alt="team picture">
 			</div>
