fixed page header, add event location heading

--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
-		<title>Funko! Pop</title>
+		<title>Funko! Pop Contact</title>
 
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+
+		<link rel="stylesheet" href="css/grid.css">
 	</head>
+
+
 	<body>
 		<header>
 			<div class = "logo">
@@ -24,3 +28,10 @@
 		<section class = "banner">
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
+
+
+
+
+
+	</body>
+</html>
