--- a/events1.html
+++ b/events1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
-		<title>Funko! Pop</title>
+		<title>Funko! Pop Event Detail</title>
 
 		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -43,6 +43,7 @@
 
 			<div class="grid-col-half">
 
+				<p class="sub-heading" id="map">Location</p>
 				<img class="picture-place" src="img/picture-place.png" height="250" width="500" alt="team picture">
 			</div>
 
