--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
-		<title>Funko! Pop</title>
+		<title>Funko! Pop Events</title>
 
 		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
