--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,20 @@
 		</section>
 
 
+		<section>
 
+			<div class="grid">
+				<div class="grid-col-half">
+					<img class="picture-place" src="img/picture-place.png" height="250" width="400" alt="map">
+				</div>
+			
+
+				<div class="grid-col-30" >
+					<h3 class="big-header" id="contact-h"> Funko! Pop</h3>
+					<p class="information-header" id="contact-info"> 123 Granville Street <br> Vancouver, B.C. </p>
+					<p class="information-header" id="contact-info">604 123 4567</p>
+				</div>
+			</div>
 
 
 	</body>
