--- a/view-item.html
+++ b/view-item.html
@@ -16,10 +16,10 @@
 				<img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
 			</div>
 			<nav>
-				<a href = "products.html" class="current"> Products </a>
-				<a href = "#"> About </a>
-				<a href = "#"> Contact </a>
-				<a href = "#"> Events </a> 
+				<a class ="head-nav current" href = "products.html"> Products </a>
+				<a class ="head-nav" href = "#"> About </a>
+				<a class ="head-nav" href = "#"> Contact </a>
+				<a class ="head-nav" href = "#"> Events </a> 
 			</nav>
 		</header>
 
