Mobile for all product pages are complete links from the index onto the product pages are also working

--- a/view-item.html
+++ b/view-item.html
@@ -24,9 +24,9 @@
 		</header>
 
 		<nav class = "item-breadcrumbs">
-				<a href ="#" class= "bc-home">Home</a> 
+				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
-				<a href = "#" class = "bc-products">Products</a>
+				<a href = "products.html" class = "bc-products">Products</a>
 				<p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-products">Pop! Heroes</a><p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-current">Pop! Heroes: Batman</a>
@@ -48,7 +48,7 @@
           			<input class="item-quantity" type="text" id="form-name" value="1"> 
           			</form>
          		 	
-         		 	<a href ="#" class="button load"> Add to Cart Button</a>
+         		 	<a href ="purchase-item.html" class="button load"> Add to Cart Button</a>
          		</div>
 			</section>
 
