--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<a href ="index.html"><img src = "img/funko.png" height="50" width = "100" alt = "funko logo"></a>
 			</div>
 			<nav>
-				<a class ="head-nav current" href = "products.html"> Products </a>
+				<a class ="head-nav" href = "products.html"> Products </a>
 				<a class ="head-nav" href = "#"> About </a>
 				<a class ="head-nav" href = "#"> Contact </a>
 				<a class ="head-nav" href = "#"> Events </a> 
