--- a/products.html
+++ b/products.html
@@ -35,9 +35,9 @@
 		</section>
 
 		<nav class = "breadcrumbs">
-				<a href ="#" class= "bc-home">Home</a> 
+				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
-				<a href = "#" class = "bc-products">Products</a>
+				<a href = "#" class = "bc-products bc-current">Products</a>
 		</nav>
 		
 		<section class = "product-list">
