--- a/events1.html
+++ b/events1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
-		<title>Funko! Pop Event Detail</title>
+		<title>Funko! Pop Event</title>
 
 		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -48,7 +48,6 @@
 			</div>
 
 		<section>
-			<h4 class="event-time"
 
 	</body>
 </html>
