reorganizing code a little

--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,15 @@
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
 
-
+<!--MAP/INFO-->
 		<section>
-
+			<!--MAP-->
 			<div class="grid">
 				<div class="grid-col-half">
 					<img class="picture-place" src="img/picture-place.png" height="250" width="400" alt="map">
 				</div>
 			
-
+				<!--STORE INFO-->
 				<div class="grid-col-30" >
 					<h3 class="big-header" id="contact-h"> Funko! Pop</h3>
 					<p class="information-header" id="contact-info"> 123 Granville Street <br> Vancouver, B.C. </p>
@@ -46,7 +46,8 @@
 			</div>
 
 			<hr>
-
+			
+<!--FORM/CONTACT-->
 			<section>
 				<h6 class="small-header"> Got a Question? Ask Us! </h6>
 				
