--- a/events.html
+++ b/events.html
@@ -31,7 +31,8 @@
 
 		<h4 class="information-header" id="upcoming-e"> Upcoming events </h4>
 
-		
+
+<!--EEVENTS-->		
 		<section>
 
 			<div class="grid">
