--- a/events1.html
+++ b/events1.html
@@ -29,6 +29,7 @@
 			<img src="img/banner-place.png" alt="banner image">
 		</section>
 
+<!--EVENT IMG/DETAIL-->
 		<div class="grid">
 			<div class="grid-col-half">
 
@@ -38,9 +39,10 @@
 					<p class="crimson-text" id="event-p"> The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics."</p>
 
 					<p class="sub-heading" id="event-time">Time: Jun 19 15:00pm</p>
-					<p id="event-time"><a href="#">More Info</a></p>
+					<p id="event-time"><a href="#">More Info</a></p><!--MORE-BUTTON-->
 			</div>
 
+<!--LOCATION-->
 			<div class="grid-col-half">
 
 				<p class="sub-heading" id="map">Location</p>
