--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
 
 			</div>
 		</div>
+
 <!--STAFF INTRO-->
 
 		<div>
@@ -136,7 +137,7 @@
 			</div>
 
 		</section>
-
+<!--END OF STAFF INTRO-->
 <!--FOOTER-->
 		<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
