linked the pages except for event details adjust logo position on about,contact,events

--- a/events.html
+++ b/events.html
@@ -18,10 +18,10 @@
 				<img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
 			</div>
 			<nav>
-				<a href = "#"> Products </a>
-				<a href = "#"> About </a>
-				<a href = "#"> Contact </a>
-				<a href = "#"> Events </a> 
+				<a href = "products.html"> Products </a>
+				<a href = "about.html"> About </a>
+				<a href = "contact.html"> Contact </a>
+				<a href = "events.html"> Events </a> 
 			</nav>
 		</header>
 
