--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,20 @@
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="css/grid.css">
+
 	</head>
 
 
 	<body>
 		<header>
 			<div class = "logo">
-				<img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
+				<a href="index.html"><img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
 			</div>
 			<nav>
-				<a href = "#"> Products </a>
-				<a href = "#"> About </a>
-				<a href = "#"> Contact </a>
-				<a href = "#"> Events </a> 
+				<a href = "products.html"> Products </a>
+				<a href = "about.html"> About </a>
+				<a href = "contact.html"> Contact </a>
+				<a href = "events.html"> Events </a> 
 			</nav>
 		</header>
 
