--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			</div>
 			<nav>
 				<a class ="head-nav" href = "products.html"> Products </a>
-				<a class ="head-nav" href = "#"> About </a>
-				<a class ="head-nav" href = "#"> Contact </a>
-				<a class ="head-nav" href = "#"> Events </a> 
+				<a class ="head-nav" href = "about.html"> About </a>
+				<a class ="head-nav" href = "contact.html"> Contact </a>
+				<a class ="head-nav" href = "events.html"> Events </a> 
 			</nav>
 		</header>
 
