--- a/products.html
+++ b/products.html
@@ -17,9 +17,9 @@
 			</div>
 			<nav>
 				<a class ="head-nav current" href = "products.html"> Products </a>
-				<a class ="head-nav" href = "#"> About </a>
-				<a class ="head-nav" href = "#"> Contact </a>
-				<a class ="head-nav" href = "#"> Events </a> 
+				<a class ="head-nav" href = "about.html"> About </a>
+				<a class ="head-nav" href = "contact.html"> Contact </a>
+				<a class ="head-nav" href = "evnet.html"> Events </a> 
 			</nav>
 		</header>
 
