--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
 				<a href="index.html"><img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
 			</div>
 			<nav>
-				<a href = "products.html"> Products </a>
-				<a href = "about.html"> About </a>
-				<a href = "contact.html"> Contact </a>
-				<a href = "events.html"> Events </a> 
+				<a class ="head-nav" href = "products.html"> Products </a>
+				<a class ="head-nav" href = "about.html"> About </a>
+				<a class ="head-nav" href = "contact.html"> Contact </a>
+				<a class ="head-nav" href = "events.html"> Events </a> 
 			</nav>
 		</header>
 
