--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
 				<a class ="head-nav current" href = "products.html"> Products </a>
 				<a class ="head-nav" href = "about.html"> About </a>
 				<a class ="head-nav" href = "contact.html"> Contact </a>
-				<a class ="head-nav" href = "evnet.html"> Events </a> 
+				<a class ="head-nav" href = "evnets.html"> Events </a> 
 			</nav>
 		</header>
 
