--- a/about.html
+++ b/about.html
@@ -2,14 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
 		<title>Funko! Pop About</title>
 
-		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 
 	<link rel="stylesheet" href="css/grid.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main1.css">
 
 	</head>
 	
@@ -58,7 +61,7 @@
 			<h4 class="information-header" id="meet-team"> MEET THE TEAM </h4>
 		</div>
 
-		<section>
+		<section class="meet-the-team">
 
 			<div class="grid">
 
@@ -124,28 +127,18 @@
 
 				</div>
 
-				
-				<div class="grid-col-half" id="staff-grid">
-
-					<img src="img/staff-place.jpg" height="200" width="200" alt="staff1 photo">
-
-					<p class="sub-heading" id="staff-name"> Jane Doe </p>
-					<p class="crimson-text" id="staff-intro"> A convict exists near the boss. The shelter orientates the torn salesman next to the mathematics. After the weary cough waves an earliest tough. The whistle tears? The under riot motors the economics across the forty anecdote. The creative customer mutters beneath an expensive equilibrium. A convict exists near the boss. </p>
-
-				</div>
-
 			</div>
 
 		</section>
 <!--END OF STAFF INTRO-->
 <!--FOOTER-->
-		<section class = "footer">
+		 	<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
 		   <form id="comments" method="post" action="#">
           <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
           </form>
-      </div>
+      		</div>
 		
 		<div class ="footer-icons">
 			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
