--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Funko! Pop Contact</title>
 
-		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="css/grid.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main1.css">
 
 	</head>
 
