--- a/events.html
+++ b/events.html
@@ -2,20 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Funko! Pop Events</title>
 
-		<link rel="stylesheet" href="css/main1.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="css/grid.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main1.css">
 	</head>
 
 
 	<body>
 		<header>
 			<div class = "logo">
-				<img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
+				<a href="index.html"><img src = "img/funko.png" height="50" width = "100" alt = "funko logo">
 			</div>
 			<nav>
 				<a class ="head-nav" href = "products.html"> Products </a>
