--- a/events1.html
+++ b/events1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset= "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Funko! Pop Event</title>
 
 		<link rel="stylesheet" href="css/main1.css">
@@ -9,6 +10,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="css/grid.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main1.css">
 	</head>
 
 
