fixed a broken link

--- a/events.html
+++ b/events.html
@@ -34,13 +34,13 @@
 		<h4 class="information-header" id="upcoming-e"> Upcoming events </h4>
 
 
-<!--EEVENTS-->		
+<!--EVENTS-->		
 		<section>
 
 			<div class="grid">
 
 				<div class="grid-col-event">
-					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
+					<a href="events1.html"><img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo"></a>
 					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
 
