--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/main1.css">
+	<link rel="stylesheet" href="css/company.css">
 
 	</head>
 	
