--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 		<link rel="stylesheet" href="css/grid.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/main1.css">
+		<link rel="stylesheet" href="css/company.css">
 
 	</head>
 
